# kira-proteoqc

./: Cargo.toml  METRICS.md  PIPELINE.md  README.md
assets/genesets/: proteoqc_v1.tsv
src/: cli.rs  ctx.rs  lib.rs  main.rs
src/expr/: layout.rs  mod.rs  prefetch.rs  reader.rs  writer.rs
src/fusion/: mod.rs
src/geneset/: loader.rs  mod.rs  resolve.rs
src/input/: mod.rs
src/io/: barcodes.rs  features.rs  h5ad.rs  json_writer.rs  mod.rs  mtx.rs  pipeline_output.rs  shared_cache.rs  summary.rs  tsv_writer.rs
src/math/: mod.rs  reduce.rs  reduce_blocked.rs  reduce_mt.rs  stats.rs
src/metrics/: mod.rs
src/metrics/proteostasis_extension/: aggregate.rs  mod.rs  panels.rs  scores.rs
src/pipeline/: mod.rs  stage0_scaffold.rs  stage10_output.rs  stage1_input.rs  stage2_h5ad.rs  stage3_expr_cache.rs  stage4_geneset.rs  stage5_math.rs  stage6_axes.rs  stage7_integrate.rs  stage8_risk.rs  stage8b_proteostasis_extension.rs  stage9_timecourse.rs
src/schema/: v1.rs
src/scores/: axis_raw.rs  integrated.rs  mod.rs  risk.rs  timecourse.rs
src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
tests/: axis_raw.rs  blocked.rs  cli_help.rs  cli_run_mode.rs  expr_cache.rs  fusion.rs  geneset.rs  h5ad_input.rs  input_discovery.rs  integrated.rs  json_output.rs  mt_reduce.rs  pipeline_cache_behavior.rs  pipeline_outputs.rs  proteostasis_extension.rs  reduce.rs  risk.rs  risk_sample.rs  schema_roundtrip.rs  shared_cache.rs  simd_cfg.rs  src_inline_simd.rs  stage1_mtx.rs  stats.rs  summary.rs  timecourse.rs  tsv_output.rs  validate_cmd.rs  validate_h5ad_cmd.rs
