[package]
name = "kira-proteoqc"
description = "Deterministic, explainable proteostasis QC for single-cell expression data."
version = "0.1.1"
rust-version = "1.95"
edition = "2024"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-proteoqc"
keywords = [
    "bioinformatics",
    "proteomics",
    "cell",
    "sc-rna",
    "oncology"
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::proteomics",
    "command-line-utilities"
]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crc = "3"
flate2 = "1.0"
hdf5 = { version = "0.8.1", features = [], optional = true }
memmap2 = "0.9"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
kira-shared-sc-cache = "0.1"
kira-scio = "0.1"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.10"

[features]
default = []
mt = ["rayon"]
prefetch = []
cache-block = []
fusion = []
fusion-mt = ["mt"]
hdf5 = ["dep:hdf5", "kira-scio/h5ad"]
